nimnuklear/src/nuklear.h


typedef NK_SIZE_TYPE nk_size;

typedef nk_uint nk_rune;


/* ============================================================================
 *
 *                                  API
 *
 * =========================================================================== */
struct nk_buffer;

struct nk_allocator;

struct nk_vec2 {float x,y;};

struct nk_recti {short x,y,w,h;};

typedef union {void *ptr; int id;} nk_handle;

struct nk_cursor {struct nk_image img; struct nk_vec2 size, offset;};


struct nk_allocator {
    nk_handle userdata;
    nk_plugin_alloc alloc;
    nk_plugin_free free;
};

struct nk_draw_null_texture {
    nk_handle texture; /* texture handle to a texture with a white pixel */
    struct nk_vec2 uv; /* coordinates to a white pixel in the texture  */
};

enum nk_style_cursor {
    NK_CURSOR_ARROW,
    NK_CURSOR_TEXT,
    NK_CURSOR_MOVE,
    NK_CURSOR_RESIZE_VERTICAL,
    NK_CURSOR_RESIZE_HORIZONTAL,
    NK_CURSOR_RESIZE_TOP_LEFT_DOWN_RIGHT,
    NK_CURSOR_RESIZE_TOP_RIGHT_DOWN_LEFT,
    NK_CURSOR_COUNT
};

NK_API int nk_stricmpn(const char *s1, const char *s2, int n);

NK_API int nk_strtoi(const char *str, const char **endptr);

NK_API float nk_strtof(const char *str, const char **endptr);

NK_API double nk_strtod(const char *str, const char **endptr);

NK_API int nk_strfilter(const char *text, const char *regexp);

NK_API int nk_strmatch_fuzzy_string(char const *str, char const *pattern, int *out_score);

NK_API int nk_strmatch_fuzzy_text(const char *txt, int txt_len, const char *pattern, int *out_score);

/* =============================================================================
 *
 *                                  UTF-8
 *
 * ============================================================================= */
NK_API int nk_utf_decode(const char*, nk_rune*, int);

NK_API int nk_utf_encode(nk_rune, char*, int);

NK_API int nk_utf_len(const char*, int byte_len);

NK_API const char* nk_utf_at(const char *buffer, int length, int index, nk_rune *unicode, int *len);
enum nk_font_coord_type {
    NK_COORD_UV, /* texture coordinates inside font glyphs are clamped between 0-1 */
    NK_COORD_PIXEL /* texture coordinates inside font glyphs are in absolute pixel */
};


struct nk_font;

struct nk_baked_font {
    float height;
    /* height of the font  */
    float ascent, descent;
    /* font glyphs ascent and descent  */
    nk_rune glyph_offset;
    /* glyph array offset inside the font glyph baking output array  */
    nk_rune glyph_count;
    /* number of glyphs of this font inside the glyph baking array output */
    const nk_rune *ranges;
    /* font codepoint ranges as pairs of (from/to) and 0 as last element */
};


struct nk_font_config {
    struct nk_font_config *next;
    /* NOTE: only used internally */
    void *ttf_blob;
    /* pointer to loaded TTF file memory block.
     * NOTE: not needed for nk_font_atlas_add_from_memory and nk_font_atlas_add_from_file. */
    nk_size ttf_size;
    /* size of the loaded TTF file memory block
     * NOTE: not needed for nk_font_atlas_add_from_memory and nk_font_atlas_add_from_file. */

    unsigned char ttf_data_owned_by_atlas;
    /* used inside font atlas: default to: 0*/
    unsigned char merge_mode;
    /* merges this font into the last font */
    unsigned char pixel_snap;
    /* align every character to pixel boundary (if true set oversample (1,1)) */
    unsigned char oversample_v, oversample_h;
    /* rasterize at hight quality for sub-pixel position */
    unsigned char padding[3];

    float size;
    /* baked pixel height of the font */
    enum nk_font_coord_type coord_type;
    /* texture coordinate format with either pixel or UV coordinates */
    struct nk_vec2 spacing;
    /* extra pixel spacing between glyphs  */
    const nk_rune *range;
    /* list of unicode ranges (2 values per range, zero terminated) */
    struct nk_baked_font *font;
    /* font to setup in the baking process: NOTE: not needed for font atlas */
    nk_rune fallback_glyph;
    /* fallback glyph to use if a given rune is not found */
    struct nk_font_config *n;
    struct nk_font_config *p;
};


struct nk_font_glyph {
    nk_rune codepoint;
    float xadvance;
    float x0, y0, x1, y1, w, h;
    float u0, v0, u1, v1;
};


struct nk_font {
    struct nk_font *next;
    struct nk_user_font handle;
    struct nk_baked_font info;
    float scale;
    struct nk_font_glyph *glyphs;
    const struct nk_font_glyph *fallback;
    nk_rune fallback_codepoint;
    nk_handle texture;
    struct nk_font_config *config;
};


enum nk_font_atlas_format {
    NK_FONT_ATLAS_ALPHA8,
    NK_FONT_ATLAS_RGBA32
};


struct nk_font_atlas {
    void *pixel;
    int tex_width;
    int tex_height;

    struct nk_allocator permanent;
    struct nk_allocator temporary;

    struct nk_recti custom;
    struct nk_cursor cursors[NK_CURSOR_COUNT];

    int glyph_count;
    struct nk_font_glyph *glyphs;
    struct nk_font *default_font;
    struct nk_font *fonts;
    struct nk_font_config *config;
    int font_num;
};


/* some language glyph codepoint ranges */
NK_API const nk_rune *nk_font_default_glyph_ranges(void);

NK_API const nk_rune *nk_font_chinese_glyph_ranges(void);

NK_API const nk_rune *nk_font_cyrillic_glyph_ranges(void);

NK_API const nk_rune *nk_font_korean_glyph_ranges(void);
NK_API void nk_font_atlas_init_default(struct nk_font_atlas*);
NK_API void nk_font_atlas_init(struct nk_font_atlas*, struct nk_allocator*);

NK_API void nk_font_atlas_init_custom(struct nk_font_atlas*, struct nk_allocator *persistent, struct nk_allocator *transient);

NK_API void nk_font_atlas_begin(struct nk_font_atlas*);

NK_API struct nk_font_config nk_font_config(float pixel_height);

NK_API struct nk_font *nk_font_atlas_add(struct nk_font_atlas*, const struct nk_font_config*);
NK_API struct nk_font* nk_font_atlas_add_default(struct nk_font_atlas*, float height, const struct nk_font_config*);
NK_API struct nk_font* nk_font_atlas_add_from_memory(struct nk_font_atlas *atlas, void *memory, nk_size size, float height, const struct nk_font_config *config);
NK_API struct nk_font* nk_font_atlas_add_from_file(struct nk_font_atlas *atlas, const char *file_path, float height, const struct nk_font_config*);
NK_API struct nk_font *nk_font_atlas_add_compressed(struct nk_font_atlas*, void *memory, nk_size size, float height, const struct nk_font_config*);

NK_API struct nk_font* nk_font_atlas_add_compressed_base85(struct nk_font_atlas*, const char *data, float height, const struct nk_font_config *config);

NK_API const void* nk_font_atlas_bake(struct nk_font_atlas*, int *width, int *height, enum nk_font_atlas_format);

NK_API void nk_font_atlas_end(struct nk_font_atlas*, nk_handle tex, struct nk_draw_null_texture*);

NK_API const struct nk_font_glyph* nk_font_find_glyph(struct nk_font*, nk_rune unicode);

NK_API void nk_font_atlas_cleanup(struct nk_font_atlas *atlas);

NK_API void nk_font_atlas_clear(struct nk_font_atlas*);

/* ==============================================================
 *
 *                          MEMORY BUFFER
 *
 * ===============================================================*/
/*  A basic (double)-buffer with linear allocation and resetting as only
    freeing policy. The buffer's main purpose is to control all memory management
    inside the GUI toolkit and still leave memory control as much as possible in
    the hand of the user while also making sure the library is easy to use if
    not as much control is needed.
    In general all memory inside this library can be provided from the user in
    three different ways.

    The first way and the one providing most control is by just passing a fixed
    size memory block. In this case all control lies in the hand of the user
    since he can exactly control where the memory comes from and how much memory
    the library should consume. Of course using the fixed size API removes the
    ability to automatically resize a buffer if not enough memory is provided so
    you have to take over the resizing. While being a fixed sized buffer sounds
    quite limiting, it is very effective in this library since the actual memory
    consumption is quite stable and has a fixed upper bound for a lot of cases.

    If you don't want to think about how much memory the library should allocate
    at all time or have a very dynamic UI with unpredictable memory consumption
    habits but still want control over memory allocation you can use the dynamic
    allocator based API. The allocator consists of two callbacks for allocating
    and freeing memory and optional userdata so you can plugin your own allocator.

    The final and easiest way can be used by defining
    NK_INCLUDE_DEFAULT_ALLOCATOR which uses the standard library memory
    allocation functions malloc and free and takes over complete control over
    memory in this library.
*/
struct nk_memory_status {
    void *memory;
    unsigned int type;
    nk_size size;
    nk_size allocated;
    nk_size needed;
    nk_size calls;
};


enum nk_buffer_allocation_type {
    NK_BUFFER_FRONT,
    NK_BUFFER_BACK,
    NK_BUFFER_MAX
};

struct nk_buffer {
    struct nk_buffer_marker marker[NK_BUFFER_MAX];
    /* buffer marker to free a buffer to a certain offset */
    struct nk_allocator pool;
    /* allocator callback for dynamic buffers */
    enum nk_allocation_type type;
    /* memory management type */
    struct nk_memory memory;
    /* memory and size of the current memory block */
    float grow_factor;
    /* growing factor for dynamic memory management */
    nk_size allocated;
    /* total amount of memory allocated */
    nk_size needed;
    /* totally consumed memory given that enough memory is present */
    nk_size calls;
    /* number of allocation calls */
    nk_size size;
    /* current size of the buffer */
};
NK_API void nk_buffer_init_default(struct nk_buffer*);
NK_API void nk_buffer_init(struct nk_buffer*, const struct nk_allocator*, nk_size size);

NK_API void nk_buffer_init_fixed(struct nk_buffer*, void *memory, nk_size size);

NK_API void nk_buffer_info(struct nk_memory_status*, struct nk_buffer*);

NK_API void nk_buffer_push(struct nk_buffer*, enum nk_buffer_allocation_type type, const void *memory, nk_size size, nk_size align);

NK_API void nk_buffer_mark(struct nk_buffer*, enum nk_buffer_allocation_type type);

NK_API void nk_buffer_reset(struct nk_buffer*, enum nk_buffer_allocation_type type);

NK_API void nk_buffer_clear(struct nk_buffer*);

NK_API void nk_buffer_free(struct nk_buffer*);

NK_API void *nk_buffer_memory(struct nk_buffer*);

NK_API const void *nk_buffer_memory_const(const struct nk_buffer*);

NK_API nk_size nk_buffer_total(struct nk_buffer*);


/* ==============================================================
 *
 *                          STRING
 *
 * ===============================================================*/
/*  Basic string buffer which is only used in context with the text editor
 *  to manage and manipulate dynamic or fixed size string content. This is _NOT_
 *  the default string handling method. The only instance you should have any contact
 *  with this API is if you interact with an `nk_text_edit` object inside one of the
 *  copy and paste functions and even there only for more advanced cases. */
struct nk_str {
    struct nk_buffer buffer;
    int len; /* in codepoints/runes/glyphs */
};
NK_API void nk_str_init_default(struct nk_str*);
NK_API void nk_str_init(struct nk_str*, const struct nk_allocator*, nk_size size);

NK_API void nk_str_init_fixed(struct nk_str*, void *memory, nk_size size);

NK_API void nk_str_clear(struct nk_str*);

NK_API void nk_str_free(struct nk_str*);


NK_API int nk_str_append_text_char(struct nk_str*, const char*, int);

NK_API int nk_str_append_str_char(struct nk_str*, const char*);

NK_API int nk_str_append_text_utf8(struct nk_str*, const char*, int);

NK_API int nk_str_append_str_utf8(struct nk_str*, const char*);

NK_API int nk_str_append_text_runes(struct nk_str*, const nk_rune*, int);

NK_API int nk_str_append_str_runes(struct nk_str*, const nk_rune*);


NK_API int nk_str_insert_at_char(struct nk_str*, int pos, const char*, int);

NK_API int nk_str_insert_at_rune(struct nk_str*, int pos, const char*, int);


NK_API int nk_str_insert_text_char(struct nk_str*, int pos, const char*, int);

NK_API int nk_str_insert_str_char(struct nk_str*, int pos, const char*);

NK_API int nk_str_insert_text_utf8(struct nk_str*, int pos, const char*, int);

NK_API int nk_str_insert_str_utf8(struct nk_str*, int pos, const char*);

NK_API int nk_str_insert_text_runes(struct nk_str*, int pos, const nk_rune*, int);

NK_API int nk_str_insert_str_runes(struct nk_str*, int pos, const nk_rune*);


NK_API void nk_str_remove_chars(struct nk_str*, int len);

NK_API void nk_str_remove_runes(struct nk_str *str, int len);

NK_API void nk_str_delete_chars(struct nk_str*, int pos, int len);

NK_API void nk_str_delete_runes(struct nk_str*, int pos, int len);


NK_API char *nk_str_at_char(struct nk_str*, int pos);

NK_API char *nk_str_at_rune(struct nk_str*, int pos, nk_rune *unicode, int *len);

NK_API nk_rune nk_str_rune_at(const struct nk_str*, int pos);

NK_API const char *nk_str_at_char_const(const struct nk_str*, int pos);

NK_API const char *nk_str_at_const(const struct nk_str*, int pos, nk_rune *unicode, int *len);


NK_API char *nk_str_get(struct nk_str*);

NK_API const char *nk_str_get_const(const struct nk_str*);

NK_API int nk_str_len(struct nk_str*);

NK_API int nk_str_len_char(struct nk_str*);