demo/sdl_opengl3/nimnuklear/nuklear.nim

proc stricmpn*(s1: cstring; s2: cstring; n: cint): cint {.cdecl, importc: "nk_stricmpn",
    header: headernuklear.}
proc strtoi*(str: cstring; endptr: cstringArray): cint {.cdecl, importc: "nk_strtoi",
    header: headernuklear.}
proc strtof*(str: cstring; endptr: cstringArray): cfloat {.cdecl, importc: "nk_strtof",
    header: headernuklear.}
proc strtod*(str: cstring; endptr: cstringArray): cdouble {.cdecl,
    importc: "nk_strtod", header: headernuklear.}
proc strfilter*(text: cstring; regexp: cstring): cint {.cdecl, importc: "nk_strfilter",
    header: headernuklear.}
proc strmatch_fuzzy_string*(str: cstring; pattern: cstring; out_score: ptr cint): cint {.
    cdecl, importc: "nk_strmatch_fuzzy_string", header: headernuklear.}
proc strmatch_fuzzy_text*(txt: cstring; txt_len: cint; pattern: cstring;
                         out_score: ptr cint): cint {.cdecl,
    importc: "nk_strmatch_fuzzy_text", header: headernuklear.}
proc utf_decode*(a2: cstring; a3: ptr rune; a4: cint): cint {.cdecl,
    importc: "nk_utf_decode", header: headernuklear.}
proc utf_encode*(a2: rune; a3: cstring; a4: cint): cint {.cdecl,
    importc: "nk_utf_encode", header: headernuklear.}
proc utf_len*(a2: cstring; byte_len: cint): cint {.cdecl, importc: "nk_utf_len",
    header: headernuklear.}
proc utf_at*(buffer: cstring; length: cint; index: cint; unicode: ptr rune; len: ptr cint): cstring {.
    cdecl, importc: "nk_utf_at", header: headernuklear.}



type
  font_atlas* {.importc: "struct nk_font_atlas", header: headernuklear.} = object
    pixel* {.importc: "pixel".}: pointer
    tex_width* {.importc: "tex_width".}: cint
    tex_height* {.importc: "tex_height".}: cint
    permanent* {.importc: "permanent".}: allocator
    temporary* {.importc: "temporary".}: allocator
    custom* {.importc: "custom".}: recti
    cursors* {.importc: "cursors".}: array[CURSOR_COUNT, cursor]
    glyph_count* {.importc: "glyph_count".}: cint
    glyphs* {.importc: "glyphs".}: ptr font_glyph
    default_font* {.importc: "default_font".}: ptr font
    fonts* {.importc: "fonts".}: ptr font
    config* {.importc: "config".}: ptr font_config
    font_num* {.importc: "font_num".}: cint


proc font_default_glyph_ranges*(): ptr rune {.cdecl,
    importc: "nk_font_default_glyph_ranges", header: headernuklear.}
proc font_chinese_glyph_ranges*(): ptr rune {.cdecl,
    importc: "nk_font_chinese_glyph_ranges", header: headernuklear.}
proc font_cyrillic_glyph_ranges*(): ptr rune {.cdecl,
    importc: "nk_font_cyrillic_glyph_ranges", header: headernuklear.}
proc font_korean_glyph_ranges*(): ptr rune {.cdecl,
    importc: "nk_font_korean_glyph_ranges", header: headernuklear.}
proc font_atlas_init_default*(a2: ptr font_atlas) {.cdecl,
    importc: "nk_font_atlas_init_default", header: headernuklear.}
proc font_atlas_init*(a2: ptr font_atlas; a3: ptr allocator) {.cdecl,
    importc: "nk_font_atlas_init", header: headernuklear.}
proc font_atlas_init_custom*(a2: ptr font_atlas; persistent: ptr allocator;
                            transient: ptr allocator) {.cdecl,
    importc: "nk_font_atlas_init_custom", header: headernuklear.}
proc font_atlas_begin*(a2: ptr font_atlas) {.cdecl, importc: "nk_font_atlas_begin",
    header: headernuklear.}
proc nk_font_config*(pixel_height: cfloat): font_config {.cdecl, importc: "nk_font_config", header: headernuklear.}
proc font_atlas_add*(a2: ptr font_atlas; a3: ptr font_config): ptr font {.cdecl,
    importc: "nk_font_atlas_add", header: headernuklear.}
proc font_atlas_add_default*(a2: ptr font_atlas; height: cfloat; a4: ptr font_config): ptr font {.
    cdecl, importc: "nk_font_atlas_add_default", header: headernuklear.}
proc font_atlas_add_from_memory*(atlas: ptr font_atlas; memory: pointer; size: size;
                                height: cfloat; config: ptr font_config): ptr font {.
    cdecl, importc: "nk_font_atlas_add_from_memory", header: headernuklear.}
proc font_atlas_add_from_file*(atlas: ptr font_atlas; file_path: cstring;
                              height: cfloat; a5: ptr font_config): ptr font {.cdecl,
    importc: "nk_font_atlas_add_from_file", header: headernuklear.}
proc font_atlas_add_compressed*(a2: ptr font_atlas; memory: pointer; size: size;
                               height: cfloat; a6: ptr font_config): ptr font {.cdecl,
    importc: "nk_font_atlas_add_compressed", header: headernuklear.}
proc font_atlas_add_compressed_base85*(a2: ptr font_atlas; data: cstring;
                                      height: cfloat; config: ptr font_config): ptr font {.
    cdecl, importc: "nk_font_atlas_add_compressed_base85", header: headernuklear.}
proc font_atlas_bake*(a2: ptr font_atlas; width: ptr cint; height: ptr cint;
                     a5: font_atlas_format): pointer {.cdecl,
    importc: "nk_font_atlas_bake", header: headernuklear.}
proc font_atlas_end*(a2: ptr font_atlas; tex: handle; a4: ptr draw_null_texture) {.cdecl,
    importc: "nk_font_atlas_end", header: headernuklear.}
proc font_find_glyph*(a2: ptr font; unicode: rune): ptr font_glyph {.cdecl,
    importc: "nk_font_find_glyph", header: headernuklear.}
proc font_atlas_cleanup*(atlas: ptr font_atlas) {.cdecl,
    importc: "nk_font_atlas_cleanup", header: headernuklear.}
proc font_atlas_clear*(a2: ptr font_atlas) {.cdecl, importc: "nk_font_atlas_clear",
    header: headernuklear.}
type
  memory_status* {.importc: "struct nk_memory_status", header: headernuklear.} = object
    memory* {.importc: "memory".}: pointer
    `type`* {.importc: "type".}: cuint
    size* {.importc: "size".}: size
    allocated* {.importc: "allocated".}: size
    needed* {.importc: "needed".}: size
    calls* {.importc: "calls".}: size



proc buffer_init_default*(a2: ptr buffer) {.cdecl, importc: "nk_buffer_init_default",
                                        header: headernuklear.}
proc buffer_init*(a2: ptr buffer; a3: ptr allocator; size: size) {.cdecl,
    importc: "nk_buffer_init", header: headernuklear.}
proc buffer_init_fixed*(a2: ptr buffer; memory: pointer; size: size) {.cdecl,
    importc: "nk_buffer_init_fixed", header: headernuklear.}
proc buffer_info*(a2: ptr memory_status; a3: ptr buffer) {.cdecl,
    importc: "nk_buffer_info", header: headernuklear.}
proc buffer_push*(a2: ptr buffer; `type`: buffer_allocation_type; memory: pointer;
                 size: size; align: size) {.cdecl, importc: "nk_buffer_push",
                                        header: headernuklear.}
proc buffer_mark*(a2: ptr buffer; `type`: buffer_allocation_type) {.cdecl,
    importc: "nk_buffer_mark", header: headernuklear.}
proc buffer_reset*(a2: ptr buffer; `type`: buffer_allocation_type) {.cdecl,
    importc: "nk_buffer_reset", header: headernuklear.}
proc buffer_clear*(a2: ptr buffer) {.cdecl, importc: "nk_buffer_clear",
                                 header: headernuklear.}
proc buffer_free*(a2: ptr buffer) {.cdecl, importc: "nk_buffer_free",
                                header: headernuklear.}
proc buffer_memory*(a2: ptr buffer): pointer {.cdecl, importc: "nk_buffer_memory",
    header: headernuklear.}
proc buffer_memory_const*(a2: ptr buffer): pointer {.cdecl,
    importc: "nk_buffer_memory_const", header: headernuklear.}
proc buffer_total*(a2: ptr buffer): size {.cdecl, importc: "nk_buffer_total",
                                      header: headernuklear.}



proc str_init_default*(a2: ptr str) {.cdecl, importc: "nk_str_init_default",
                                  header: headernuklear.}
proc str_init*(a2: ptr str; a3: ptr allocator; size: size) {.cdecl,
    importc: "nk_str_init", header: headernuklear.}
proc str_init_fixed*(a2: ptr str; memory: pointer; size: size) {.cdecl,
    importc: "nk_str_init_fixed", header: headernuklear.}
proc str_clear*(a2: ptr str) {.cdecl, importc: "nk_str_clear", header: headernuklear.}
proc str_free*(a2: ptr str) {.cdecl, importc: "nk_str_free", header: headernuklear.}
proc str_append_text_char*(a2: ptr str; a3: cstring; a4: cint): cint {.cdecl,
    importc: "nk_str_append_text_char", header: headernuklear.}
proc str_append_str_char*(a2: ptr str; a3: cstring): cint {.cdecl,
    importc: "nk_str_append_str_char", header: headernuklear.}
proc str_append_text_utf8*(a2: ptr str; a3: cstring; a4: cint): cint {.cdecl,
    importc: "nk_str_append_text_utf8", header: headernuklear.}
proc str_append_str_utf8*(a2: ptr str; a3: cstring): cint {.cdecl,
    importc: "nk_str_append_str_utf8", header: headernuklear.}
proc str_append_text_runes*(a2: ptr str; a3: ptr rune; a4: cint): cint {.cdecl,
    importc: "nk_str_append_text_runes", header: headernuklear.}
proc str_append_str_runes*(a2: ptr str; a3: ptr rune): cint {.cdecl,
    importc: "nk_str_append_str_runes", header: headernuklear.}
proc str_insert_at_char*(a2: ptr str; pos: cint; a4: cstring; a5: cint): cint {.cdecl,
    importc: "nk_str_insert_at_char", header: headernuklear.}
proc str_insert_at_rune*(a2: ptr str; pos: cint; a4: cstring; a5: cint): cint {.cdecl,
    importc: "nk_str_insert_at_rune", header: headernuklear.}
proc str_insert_text_char*(a2: ptr str; pos: cint; a4: cstring; a5: cint): cint {.cdecl,
    importc: "nk_str_insert_text_char", header: headernuklear.}
proc str_insert_str_char*(a2: ptr str; pos: cint; a4: cstring): cint {.cdecl,
    importc: "nk_str_insert_str_char", header: headernuklear.}
proc str_insert_text_utf8*(a2: ptr str; pos: cint; a4: cstring; a5: cint): cint {.cdecl,
    importc: "nk_str_insert_text_utf8", header: headernuklear.}
proc str_insert_str_utf8*(a2: ptr str; pos: cint; a4: cstring): cint {.cdecl,
    importc: "nk_str_insert_str_utf8", header: headernuklear.}
proc str_insert_text_runes*(a2: ptr str; pos: cint; a4: ptr rune; a5: cint): cint {.cdecl,
    importc: "nk_str_insert_text_runes", header: headernuklear.}
proc str_insert_str_runes*(a2: ptr str; pos: cint; a4: ptr rune): cint {.cdecl,
    importc: "nk_str_insert_str_runes", header: headernuklear.}
proc str_remove_chars*(a2: ptr str; len: cint) {.cdecl, importc: "nk_str_remove_chars",
    header: headernuklear.}
proc str_remove_runes*(str: ptr str; len: cint) {.cdecl,
    importc: "nk_str_remove_runes", header: headernuklear.}
proc str_delete_chars*(a2: ptr str; pos: cint; len: cint) {.cdecl,
    importc: "nk_str_delete_chars", header: headernuklear.}
proc str_delete_runes*(a2: ptr str; pos: cint; len: cint) {.cdecl,
    importc: "nk_str_delete_runes", header: headernuklear.}
proc str_at_char*(a2: ptr str; pos: cint): cstring {.cdecl, importc: "nk_str_at_char",
    header: headernuklear.}
proc str_at_rune*(a2: ptr str; pos: cint; unicode: ptr rune; len: ptr cint): cstring {.cdecl,
    importc: "nk_str_at_rune", header: headernuklear.}
proc str_rune_at*(a2: ptr str; pos: cint): rune {.cdecl, importc: "nk_str_rune_at",
    header: headernuklear.}
proc str_at_char_const*(a2: ptr str; pos: cint): cstring {.cdecl,
    importc: "nk_str_at_char_const", header: headernuklear.}
proc str_at_const*(a2: ptr str; pos: cint; unicode: ptr rune; len: ptr cint): cstring {.
    cdecl, importc: "nk_str_at_const", header: headernuklear.}
proc str_get*(a2: ptr str): cstring {.cdecl, importc: "nk_str_get",
                                 header: headernuklear.}
proc str_get_const*(a2: ptr str): cstring {.cdecl, importc: "nk_str_get_const",
                                       header: headernuklear.}
proc str_len*(a2: ptr str): cint {.cdecl, importc: "nk_str_len", header: headernuklear.}
proc str_len_char*(a2: ptr str): cint {.cdecl, importc: "nk_str_len_char",
                                   header: headernuklear.}





